--- a/OpenSourceTutorials.ipynb
+++ b/OpenSourceTutorials.ipynb
@@ -48,7 +48,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Script initiated at Thu Sep 17 14:20:48 2020\n"
+      "Script initiated at Thu Sep 17 17:04:14 2020\n"
      ]
     }
    ],
@@ -78,8 +78,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Script initiated at Thu Sep 17 14:20:50 2020\n",
-      "Script initiated at Thu Sep 17 14:20:50 2020\n",
+      "Script initiated at Thu Sep 17 17:04:16 2020\n",
+      "Script initiated at Thu Sep 17 17:04:16 2020\n",
       "usage: Create_Domain_Boundary_Shapefile.py [-h] -i IN_NC -o OUT_DIR\n",
       "\n",
       "This tool takes an WRF Geogrid file and creates a single polygon shapefile\n",
@@ -113,18 +113,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Script initiated at Thu Sep 17 14:20:52 2020\n",
-      "Script initiated at Thu Sep 17 14:20:52 2020\n",
+      "Script initiated at Thu Sep 17 17:04:17 2020\n",
+      "Script initiated at Thu Sep 17 17:04:17 2020\n",
       "WPS netCDF projection identification initiated...\n",
       "    Map Projection: Lambert Conformal Conic\n",
       "    Using MOAD_CEN_LAT for latitude of origin.\n",
       "    Using Standard Parallel 2 in Lambert Conformal Conic map projection.\n",
-      "    Geo-referencing step completed without error in  0.25 seconds.\n",
+      "    Geo-referencing step completed without error in  0.20 seconds.\n",
       "    Created projection definition from input NetCDF GEOGRID file.\n",
       "      ESRI Shapefile driver is available.\n",
-      "  Done producing output vector polygon shapefile in  0.01 seconds\n",
+      "  Done producing output vector polygon shapefile in  0.02 seconds\n",
       "  Output shapefile: C:\\Users\\casali\\Documents\\Projects\\ForKevin\\OpenSource_GIS_ProProcessing\\Tutorials\\Jupyter\\Outputs\\geo_em.d01_boundary.shp\n",
-      "Process completed in 0.27 seconds.\n"
+      "Process completed in 0.23 seconds.\n"
      ]
     }
    ],
@@ -149,7 +149,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f1ce40f6dcea413ea75489495db24d38",
+       "model_id": "3b302564fe064c2cbf265f332c677cac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -229,7 +229,7 @@
       "    Map Projection: Lambert Conformal Conic\n",
       "    Using MOAD_CEN_LAT for latitude of origin.\n",
       "    Using Standard Parallel 2 in Lambert Conformal Conic map projection.\n",
-      "    Geo-referencing step completed without error in  0.08 seconds.\n",
+      "    Geo-referencing step completed without error in  0.15 seconds.\n",
       "    X-dimension: 'west_east'.\n",
       "    Y-dimension: 'south_north'.\n",
       "    Reversing order of dimension 'south_north'\n",
@@ -268,10 +268,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib\n",
     "from osgeo import gdal\n",
     "from ipyleaflet import ImageOverlay\n",
     "import warnings\n",
@@ -297,10 +298,12 @@
     "        cmap = 'Blues'\n",
     "    else:\n",
     "        cmap='Blues'\n",
+    "        \n",
+    "#     pyplot.imshow(src.read(1), cmap=cmap,  aspect='auto', norm=norm, interpolation='nearest')\n",
     "\n",
     "def show_raster_map(raster_path, map_id):\n",
     "    # Make new folder if does not exist\n",
-    "    raster_outputs_prj = os.path.join(output_folder, in_var)\n",
+    "    raster_outputs_prj = os.path.join(output_folder, 'Raster_Outputs_Prj')\n",
     "    if os.path.exists(raster_outputs_prj):\n",
     "        pass\n",
     "    else:\n",
@@ -314,9 +317,10 @@
     "    \n",
     "    # Open in rasterio, give colormap, make no data transparent, save as png\n",
     "    src = rasterio.open(output_raster)\n",
+    "    \n",
     "    cmap = pyplot.get_cmap('turbo')\n",
-    "    cmap.set_under('k', alpha=0)\n",
     "    pyplot.imshow(src.read(1), cmap=cmap,  aspect='auto', vmin=0.00001)\n",
+    "    cmap.set_under('k', alpha=0)\n",
     "    pyplot.axis('off')\n",
     "    new_file_name = file_name.replace('.tif', '.png')\n",
     "    pyplot.savefig(os.path.join(raster_outputs_prj, new_file_name), transparent=True, bbox_inches='tight')\n",
@@ -342,13 +346,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85ea0a1eb8714fe2b92c2b0c8d234963",
+       "model_id": "8bfe606ac145475fbbe394e8f4d6bab0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -373,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +441,7 @@
       "    Map Projection: Lambert Conformal Conic\n",
       "    Using MOAD_CEN_LAT for latitude of origin.\n",
       "    Using Standard Parallel 2 in Lambert Conformal Conic map projection.\n",
-      "    Geo-referencing step completed without error in  0.14 seconds.\n",
+      "    Geo-referencing step completed without error in  0.10 seconds.\n",
       "  Building sub-grid of model grid.\n",
       "    Original grid spacing dx=1000.0, dy=-1000.0\n",
       "    Original grid size: rows=16, cols=15\n",
@@ -454,10 +458,10 @@
       "    Map Projection of input raster : lambert_conformal_conic\n",
       "    Starting Process: Building to XMap/YMap\n",
       "    Conversion of input raster to XMap/YMap completed without error.\n",
-      "  netCDF global attributes set after  0.06 seconds.\n",
+      "  netCDF global attributes set after  0.03 seconds.\n",
       "    Raster resampling initiated...\n",
       "    The High-resolution dataset will be 100.0m\n",
-      "    Projected input raster to model grid in  0.92 seconds.\n",
+      "    Projected input raster to model grid in  0.47 seconds.\n",
       "  Deriving geocentric coordinates on routing grid from bilinear interpolation of geogrid coordinates.\n",
       "    GDAL Data type derived from input array: 6 (float32)\n",
       "    GDAL Data type derived from input array: 6 (float32)\n",
@@ -466,17 +470,17 @@
       "    Projected input raster to model grid in  0.09 seconds.\n",
       "    Raster resampling initiated...\n",
       "    The High-resolution dataset will be 100.0m\n",
-      "    Projected input raster to model grid in  0.15 seconds.\n",
+      "    Projected input raster to model grid in  0.08 seconds.\n",
       "  Creating CF-netCDF File.\n",
       "    Esri PE String: PROJCS[\"unnamed\",GEOGCS[\"GCS_Sphere\",DATUM[\"D_Sphere\",SPHEROID[\"unnamed\",6370000.0,0.0]],PRIMEM[\"Greenwich\",0.0],UNIT[\"Degree\",0.0174532925199433]],PROJECTION[\"Lambert_Conformal_Conic\"],PARAMETER[\"False_Easting\",0.0],PARAMETER[\"False_Northing\",0.0],PARAMETER[\"Central_Meridian\",-97.0],PARAMETER[\"Standard_Parallel_1\",30.0],PARAMETER[\"Standard_Parallel_2\",60.0],PARAMETER[\"Latitude_Of_Origin\",41.4710083007813],UNIT[\"Meter\",1.0]]\n",
       "    Map Projection of input raster : lambert_conformal_conic\n",
       "    Starting Process: Building to XMap/YMap\n",
       "    Conversion of input raster to XMap/YMap completed without error.\n",
       "    Proceeding to add LATITUDE and LONGITUDE variables after     0.05 seconds.\n",
-      "  netCDF global attributes set after  0.07 seconds.\n",
+      "  netCDF global attributes set after  0.06 seconds.\n",
       "    Raster resampling initiated...\n",
       "    The High-resolution dataset will be 100.0m\n",
-      "    Projected input raster to model grid in  0.13 seconds.\n",
+      "    Projected input raster to model grid in  0.16 seconds.\n",
       "    Process: landuse written to output netCDF.\n",
       "Terrain processing step initiated...\n",
       "    Using WhiteboxTools v1.3.1 by Dr. John B. Lindsay (c) 2017-2020\n",
@@ -489,16 +493,16 @@
       "    Process: RETDEPRTFAC written to output netCDF.\n",
       "    Process: OVROUGHRTFAC written to output netCDF.\n",
       "    Process: LKSATFAC written to output netCDF.\n",
-      "Terrain processing step completed without error in  0.71 seconds.\n",
+      "Terrain processing step completed without error in  0.40 seconds.\n",
       "Beginning to build 2D groundwater basin inputs\n",
       "  Building groundwater inputs using FullDom LINKID local basins\n",
       "    Generating LINKID grid for building local sub-basins.\n",
-      "Finished building fine-grid groundwater basin grids in  0.22 seconds\n",
+      "Finished building fine-grid groundwater basin grids in  0.15 seconds\n",
       "Beginning to build coarse-grid groundwater basins and parameters\n",
       "    Found 42 basins in the watershed grid\n",
       "    Raster resampling initiated...\n",
       "    The High-resolution dataset will be 1000.0m\n",
-      "    Projected input raster to model grid in  0.13 seconds.\n",
+      "    Projected input raster to model grid in  0.08 seconds.\n",
       "    Found 42 basins (potentially including nodata values) in the file after resampling to the coarse grid.\n",
       "    GDAL Data type derived from input array: 5 (int32)\n",
       "  Creating CF-netCDF File.\n",
@@ -510,12 +514,12 @@
       "    NC dimensions: 16, 15\n",
       "    GWBUCKS array dimensions: 16, 15\n",
       "    Process: C:\\Users\\casali\\Documents\\Projects\\ForKevin\\OpenSource_GIS_ProProcessing\\Tutorials\\Jupyter\\Outputs\\scratchdir\\GWBASINS.nc completed without error\n",
-      "    Finished building groundwater grid file in  0.04 seconds\n",
+      "    Finished building groundwater grid file in  0.03 seconds\n",
       "    Calculating size and ID parameters for basin polygons.\n",
       "    Created output bucket parameter table (.nc): C:\\Users\\casali\\Documents\\Projects\\ForKevin\\OpenSource_GIS_ProProcessing\\Tutorials\\Jupyter\\Outputs\\scratchdir\\GWBUCKPARM.nc.\n",
       "  Finished building groundwater bucket parameter table in  0.02 seconds.\n",
-      "Finished building groundwater parameter files in  0.21 seconds\n",
-      "Built output .zip file in  3.00 seconds.\n"
+      "Finished building groundwater parameter files in  0.14 seconds\n",
+      "Built output .zip file in  1.88 seconds.\n"
      ]
     }
    ],
@@ -577,7 +581,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Script initiated at Thu Sep 17 14:21:01 2020\n",
+      "Script initiated at Thu Sep 17 17:04:25 2020\n",
       "usage: Build_Routing_Stack.py [-h] -i INGEOGRID [--CSV INCSV] [-b BASIN_MASK]\n",
       "                              [-r RB_ROUTING] [-l IN_RESERVOIRS] -d INDEM\n",
       "                              [-R CELLSIZE] [-t THRESHOLD] [-o OUT_ZIP_FILE]\n",
@@ -689,7 +693,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "062fcf43d54c4d4886d8166d899e37a7",
+       "model_id": "1a7e9e7bfd744f8e90407711a64b3903",
        "version_major": 2,
        "version_minor": 0
       },
@@ -739,13 +743,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "41bbee5712ce492d84d6811737ac02dd",
+       "model_id": "aed44d2e398c40acbaa929f765b159b0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -770,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
