Updated directory creation 9/18/20

--- a/OpenSourceTutorials.ipynb
+++ b/OpenSourceTutorials.ipynb
@@ -196,9 +196,7 @@
     "def show_raster_map(raster_path, map_id):\n",
     "    # Make new folder if does not exist\n",
     "    raster_outputs_prj = os.path.join(output_folder, 'Raster_Outputs_Prj')\n",
-    "    if os.path.exists(raster_outputs_prj):\n",
-    "        pass\n",
-    "    else:\n",
+    "    if not os.path.exists(raster_outputs_prj):\n",
     "        os.mkdir(raster_outputs_prj)\n",
     "    \n",
     "    # Reproject raster\n",
@@ -431,8 +429,9 @@
     "from Examine_Outputs_of_GIS_Preprocessor import examine_outputs\n",
     "from wrfhydro_functions import ZipCompat\n",
     "\n",
-    "os.mkdir(os.path.join(output_folder, \"Raster_Outputs\"))\n",
     "raster_outputs = os.path.join(output_folder, \"Raster_Outputs\")\n",
+    "if not os.path.exists(raster_outputs):\n",
+    "    os.mkdir(raster_outputs)\n",
     "\n",
     "ZipCompat(out_zip).extractall(raster_outputs)\n",
     "examine_outputs(raster_outputs, skipfiles=[])"
