Updated Croton notebook

--- a/Building_Croton_Test_Case_Data.ipynb
+++ b/Building_Croton_Test_Case_Data.ipynb
@@ -15,9 +15,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Gridded channel routing configuration with reservoirs, forecast points, and channel masking\n",
+    "### 1. Gridded channel routing configuration with reservoirs and forecast points\n",
     "\n",
-    "This domain is a gridded domain with lakes, gages, masked basins and a regridding factor of 4 and thrshold of 20"
+    "This domain is a gridded domain with lakes, gages and a regridding factor of 4 and threshold of 20"
    ]
   },
   {
