--- a/Lesson-S2-GIS.ipynb
+++ b/Lesson-S2-GIS.ipynb
@@ -323,7 +323,7 @@
     "in_geogrid = os.path.join(data_folder, 'geo_em.d01.nc')\n",
     "lakes = os.path.join(data_folder, 'lake_shapes', 'lakes.shp')\n",
     "csv = os.path.join(data_folder, 'croton_frxst_pts_FOSS.csv')\n",
-    "in_dem = os.path.join(data_folder, 'NED_30m_02b_Croton.tif')\n",
+    "in_dem = os.path.join(data_folder, 'NED_30m_Croton.tif')\n",
     "regrid_factor = 4\n",
     "routing_cells = 20\n",
     "out_zip = os.path.join(output_folder, 'croton_test.zip')\n",
