Updated map functions

--- a/Lesson-S2-GIS.ipynb
+++ b/Lesson-S2-GIS.ipynb
@@ -47,6 +47,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import shutil\n",
     "\n",
     "gis_data_folder = \"/home/docker/GIS_Training\"\n",
     "\n",
@@ -55,7 +56,11 @@
     "\n",
     "data_folder = os.path.join(cwd, 'Croton_Lambert')\n",
     "in_geogrid = os.path.join(data_folder, 'geo_em.d01.nc')\n",
-    "output_folder = os.path.join(cwd, 'Outputs')"
+    "output_folder = os.path.join(cwd, 'Outputs')\n",
+    "\n",
+    "if os.path.exists(output_folder):\n",
+    "    shutil.rmtree(output_folder)\n",
+    "    os.mkdir(output_folder)"
    ]
   },
   {
@@ -119,6 +124,7 @@
     "import json\n",
     "import geopandas\n",
     "from ipyleaflet import Map, GeoJSON, ScaleControl, FullScreenControl, basemaps, SplitMapControl, basemap_to_tiles, LayersControl\n",
+    "from jupyter_functions import create_map\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
@@ -145,9 +151,19 @@
     "m = Map(center=(41.50, -73.73), zoom=10, scroll_wheel_zoom=True)\n",
     "\n",
     "# Read GeoJSON\n",
+    "with open(b_json, 'r') as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "# Obtain vector center point\n",
+    "x = b_shp.geometry.centroid.x\n",
+    "y = b_shp.geometry.centroid.y\n",
+    "map_center = y[0], x[0]\n",
+    "\n",
+    "# Instantiate map object\n",
+    "m = create_map(map_center, 10)\n",
+    "\n",
+    "# Read GeoJSON\n",
     "geo_json = GeoJSON(data=data, name='Domain boundary')\n",
-    "m.add_control(ScaleControl(position='bottomleft'))\n",
-    "m.add_control(FullScreenControl())\n",
     "\n",
     "# Define basemaps to swipe between\n",
     "right_layer = basemap_to_tiles(basemap=basemaps.OpenStreetMap.Mapnik)\n",
@@ -157,13 +173,6 @@
     "control = SplitMapControl(left_layer=left_layer, right_layer=right_layer)\n",
     "m.add_control(control)\n",
     "m.add_layer(geo_json)\n",
-    "\n",
-    "control = LayersControl(position='topright')\n",
-    "m.add_control(control)\n",
-    "\n",
-    "# Resize map\n",
-    "m.layout.width = '950px'\n",
-    "m.layout.height = '750px'\n",
     "\n",
     "# Draw map\n",
     "m"
@@ -228,16 +237,7 @@
     "from ipyleaflet import ImageOverlay\n",
     "from jupyter_functions import cmap_options, show_raster_map\n",
     "\n",
-    "m2 = Map(center=map_center, zoom=10, scroll_wheel_zoom=True)\n",
-    "\n",
-    "m2.add_control(ScaleControl(position='bottomleft'))\n",
-    "m2.add_control(FullScreenControl())\n",
-    "control = LayersControl(position='topright')\n",
-    "m2.add_control(control)\n",
-    "\n",
-    "m2.layout.width = '950px'\n",
-    "m2.layout.height = '750px'\n",
-    "\n",
+    "m2 = create_map(map_center, 10)\n",
     "m2"
    ]
   },
@@ -420,16 +420,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m3 = Map(center=map_center, zoom=10, scroll_wheel_zoom=True)\n",
-    "\n",
-    "m3.add_control(ScaleControl(position='bottomleft'))\n",
-    "m3.add_control(FullScreenControl())\n",
-    "control = LayersControl(position='topright')\n",
-    "m3.add_control(control)\n",
-    "\n",
-    "m3.layout.width = '950px'\n",
-    "m3.layout.height = '750px'\n",
-    "\n",
+    "m3 = create_map(map_center, 10)\n",
     "m3"
    ]
   },
