--- a/Notebooks/Lesson-S2-GIS-pre-processing.ipynb
+++ b/Notebooks/Lesson-S2-GIS-pre-processing.ipynb
@@ -136,7 +136,7 @@
    "source": [
     "# Print information to screen for reference\n",
     "print('Command to run:\\n')\n",
-    "print('python Create_Domain_Boundary_Shapefile.py\\n\\t -i {0}\\n\\t -o {1}\\n'.format(in_geogrid, output_folder))\n",
+    "print('python Create_Domain_Boundary_Shapefile.py \\\\\\n\\t -i {0} \\\\\\n\\t -o {1}\\n'.format(in_geogrid, output_folder))\n",
     "\n",
     "# Run the script with required parameters\n",
     "! python Create_Domain_Boundary_Shapefile.py -i {in_geogrid} -o {output_folder}"
@@ -169,8 +169,7 @@
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
-    },
-    "scrolled": false
+    }
    },
    "outputs": [],
    "source": [
@@ -300,7 +299,7 @@
     "\n",
     "# Print information to screen for reference\n",
     "print('Command to run:\\n')\n",
-    "print(' python Build_GeoTiff_From_Geogrid_File.py\\n\\t -i {0}\\n\\t -v {1}\\n\\t -o {2}\\n'.format(in_geogrid, in_var, out_file))\n",
+    "print('python Build_GeoTiff_From_Geogrid_File.py \\\\\\n\\t -i {0} \\\\\\n\\t -v {1} \\\\\\n\\t -o {2}\\n'.format(in_geogrid, in_var, out_file))\n",
     "\n",
     "# Run the script with required parameters\n",
     "! python Build_GeoTiff_From_Geogrid_File.py -i {in_geogrid} -v {in_var} -o {out_file}"
@@ -449,7 +448,7 @@
     "\n",
     "# Print information to screen for reference\n",
     "print('Command to run:\\n')\n",
-    "print('python Build_Routing_Stack.py\\n\\t -i {0}\\n\\t -l {1}\\n\\t --CSV {2}\\n\\t -d {3}\\n\\t -R {4}\\n\\t -t {5}\\n\\t -o {6}\\n'.format(in_geogrid, lakes, csv, in_dem, regrid_factor, routing_cells, out_zip))\n",
+    "print('python Build_Routing_Stack.py \\\\\\n\\t -i {0} \\\\\\n\\t -l {1} \\\\\\n\\t --CSV {2} \\\\\\n\\t -d {3} \\\\\\n\\t -R {4} \\\\\\n\\t -t {5} \\\\\\n\\t -o {6}\\n'.format(in_geogrid, lakes, csv, in_dem, regrid_factor, routing_cells, out_zip))\n",
     "\n",
     "# Run the script with required parameters\n",
     "! python Build_Routing_Stack.py -i {in_geogrid} -l {lakes} --CSV {csv} -d {in_dem} -R {regrid_factor} -t {routing_cells} -o {out_zip}"
@@ -459,7 +458,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. Examine outputs of GIS pre-processor"
+    "### 4. Understanding the outputs\n",
+    "\n",
+    "The `Build_Routing_Stack.py` script creates a Zip archive of output files according to the options provided to the tool. There will be at least four netCDF files; one spatial metadata file describing the LDAS grid (‘GEOGRID_LDASOUT_Spatial_Metadata.nc), one 2D file describing the routing grid (‘Fulldom_hires.nc’), a 2D groundwater basin file (‘GWBASINS.nc’), and a 1D groundwater basin parameter file (‘GWBUCKPARM.nc’). The ‘Fulldom_hires.nc’ file will contain between 13 and 14 2-dimensional (gridded) netCDF variables. The output Zip file may additionally include shapefiles (.shp and accompanying files) describing the geometry of modeled lakes or the vector stream network, and netCDF 1-dimensional parameter tables (.nc) describing lake parameters (‘LAKEPARM.nc’) or the stream network (‘Route_Link.nc’). All variables in the ‘Fulldom_hires.nc’ file will have the same grid dimensions. The x-dimension is always ‘x’ and the y-dimension always ‘y’.  Below is an alphabetically sorted list of gridded variables that are created by the `Build_Routing_Stack.py` tool, and Table 5 contains descriptions of each grid.\n",
+    "\n",
+    "Fulldom_hires.nc file:\n",
+    "  + CHANNELGRID - The channel grid. Channel pixels = 0, non-channel pixels = -9999. If the `-b` option is set to TRUE, the output will be masked to the gaged basins provided, where non-gaged channels are given a value of ‘-1’. If lake routing is activated, lake outflow points will be identified by the lake ID value.\n",
+    "  + FLOWACC – Flow accumulation grid. This grid gives the number of contributing cells for each cell in the domain. This grid is provided for convenience and is not read by WRF-Hydro.\n",
+    "  + FLOWDIRECTION – Flow direction grid. This grid gives the direction of flow using the D8 algorithm between each cell and the steepest downslope neighbor according to Jenson and Domingue (1988). The result is an integer grid with values ranging from 1 to 128.\n",
+    "  + frxst_pts – Gage location grid. If a forecast point CSV file is provided, the grid will have a cell identified at the location of each forecast point (gage) in the gage CSV file. If no input CSV gage location file is provided, this grid will be uniform with values of ‘-9999’. Gage pixels are numbered in the same way as the ‘basn_msk’ grid. NoData cells are given a value of ‘-9999’.\n",
+    "  + basn_msk – Forecast basins grid. If a CSV gage location file is provided, catchments are delineated from a point that is up to 3 pixels downstream of the gage coordinates. This distance can be modified by altering the ‘walker’ global variable in the ‘wrfhydro_functions.py’ script. If masking of the ‘CHANNELGRID’ is selected, this layer is the mask. Basins are numbered according to the values in the ‘FID’ field of the input gage CSV file. If no gage location file is provided, this grid will be uniform with values of ‘-9999’.\n",
+    "  + LAKEGRID – The lake grid. If a lake polygon shapefile is provided to the `-l` parameter, this grid will contain ID values for each lake that can be resolved on the routing grid. Otherwise, this grid will be uniform with values of -9999.\n",
+    "  + landuse – This is the same data as the ‘LU_INDEX’ variable in the GEOGRID file, but resampled using Nearest Neighbor assignment to the resolution of the routing grid. This grid is provided for convenience and is not read by WRF-Hydro.\n",
+    "  + LATITUDE – Grid of the latitude at the center of each grid cell, in a geographic coordinate system (WGS84).\n",
+    "  + LINKID – The channel ID grid. This grid provides a unique integer identifier for each channel segment that is defined in the ‘link’ variable of the ‘Route_Link.nc’ file and the ‘STRM_VAL’ field in the ‘streams.shp’ shapefile. The ‘LINKID’ grid will only be created if the option `-r` is TRUE.\n",
+    "  + LONGITUDE – Grid of longitude value at the center of each grid cell, in a geographic coordinate system (WGS84).\n",
+    "  + OVROUGHRTFAC – OVROUGHRTFAC parameter. Currently set to a default of 1.0. This default value may be changed by providing an alternate value to the `-O` parameter.\n",
+    "  + RETDEPRTFAC – RETDEPRTFAC (retention depth multiplier) parameter. Currently set to a default of 1.0. This default value may be changed by providing an alternate value `-T` parameter.\n",
+    "  + STREAMORDER – Stream order grid, calculated using the Strahler method (Strahler 1957).\n",
+    "  + TOPOGRAPHY – Elevation grid. The units of elevation are the same as the input elevation raster dataset (`-d INDEM`), which should be specified in meters (m) above sea level (ASL). This grid is derived from the elevation values in the input elevation raster, but has been resampled to the routing grid resolution, and pit-filled according to the method described in Planchon and Darboux (2002).\n",
+    "\n",
+    "Other files:\n",
+    "  + GEOGRID_LDASOUT_Spatial_Metadata.nc  - This is a CF-netCDF format file that provides the spatial metadata associated with the GEOGRID variables. By default, no 2-dimensional grids are written to the file. This file may be used by WRF-Hydro for appending geospatial metadata to the land surface model output, if necessary.\n",
+    "  + GWBASINS.nc - This is a 2D netCDF file of the location of groundwater basins, regridded to the LSM grid resolution. NoData cells are given a value of ‘-9999’. This file is by default created using the ‘FullDom LINKID local basins’ method of defining groundwater basins.\n",
+    "  + LAKEPARM.nc – Lake parameter table. This 1D netCDF format file is created if a lake shapefile is provided as input to the `-l` parameter. The table will contain a record for each lake feature in the + Fulldom_hires.nc ‘LAKEGRID’ variable, and contain derived and default parameters for each lake.\n",
+    "  + Route_Link.nc – The reach-based routing parameter file. This 1D netCDF format file is created if the `-r` parameter is TRUE. The file contains a record for each stream segment. The stream segments in this table are also identified by the unique ‘LINKID’ values in the ‘LINKID’ variable in the ‘Fulldom_hires.nc’ file, and values in the ‘STRM_VAL’ field of the output ‘streams.shp’ shapefile. This table contains derived and default stream segment parameters that are calculated based on the vector stream network and topology in the ‘streams.shp’ shapefile.\n",
+    "  + streams.* (ancillary) - Streams shapefile, containing one feature for each stream segment in the domain. This file is meant to accompany the ‘Route_Link.nc’ reach-based routing parameter file and Fulldom_hires.nc ‘LINKID’ variable. The ‘streams’ shapefile is only created when the option `-l` is used. The ‘STRM_VAL’ field is the unique identifier for each stream segment, and corresponds to the ‘link’ variable of the ‘Route_Link.nc’ file and the ‘LINKID’ variable in the ‘Fulldom_hires.nc’ file. The geometry of the stream segments in this shapefile informs many of the parameters in the ‘Route_Link.nc’ file.\n",
+    "  + lakes.* (ancillary) - Lakes shapefile, containing one feature for each reservoir in the simulation domain. This file is meant to accopmany the 'LAKEPARM.nc' reservoir parameter file. If `-r TRUE` is used, then Fulldom_hires.nc 'LAKEID' variable will contain -9999 values only. The geometry of reservoir objects informs many of the parameters in 'LAKEPARM.nc' file.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. Examine outputs of GIS pre-processor"
    ]
   },
   {
@@ -511,6 +543,10 @@
     "# Define output directory to store GeoTiff output of all routing stack grids\n",
     "raster_outputs = os.path.join(output_folder, \"Raster_Outputs\")\n",
     "\n",
+    "# Print information to screen for reference\n",
+    "print('Command to run:\\n')\n",
+    "print('python Examine_Outputs_of_GIS_Preprocessor.py \\\\\\n\\t -i {0} \\\\\\n\\t -o {1}\\n'.format(out_zip, raster_outputs))\n",
+    "\n",
     "# Run the script with required parameters\n",
     "! python Examine_Outputs_of_GIS_Preprocessor.py -i {out_zip} -o {raster_outputs}"
    ]
@@ -519,14 +555,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5. Vizualize the output grids"
+    "### 6. Vizualize the output grids"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, we want to take a look at the output rasters. Below, we utilize a Jupyter widget to choose each raster from a drop down menu. Each of the 2D variables in Fulldom_hires.nc (the routing grid netCDF file) will be displayed as a rectangular grid. Take a look at some of the outputs."
+    "Finally, we want to take a look at some of the output rasters. Below, we utilize a Jupyter widget to choose each raster from a drop down menu. Each of the 2D variables in Fulldom_hires.nc (the routing grid netCDF file) will be displayed as a rectangular grid. Take a look at some of the outputs."
    ]
   },
   {
@@ -635,7 +671,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
