--- a/Notebooks/Lesson-S2-GIS-pre-processing.ipynb
+++ b/Notebooks/Lesson-S2-GIS-pre-processing.ipynb
@@ -1119,11 +1119,148 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### 7. [Optional] Build Non-NWM WRF-Hydro Configurations of the Croton, NY Test Case\n",
     "\n",
     "We will run command-line arguments to create output directories for each of the test cases. Then, each cell will run the WRF-Hydro GIS Pre-processor to build the 'routing stack' files. The final command is used to unzip the outputs so they can be more readily used by WRF-Hydro. There are 4 Non-NWM test-case configurations which can all be created using different combinations of arguments to the GIS pre-processor. Currently missing at this time is the Reach-with-Lakes capability as well as the ability to build wrfinput, hydro2dtbl, and soil_properties files."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### A. Gridded channel routing configuration with reservoirs and forecast points\n",
+    "\n",
+    "This domain is a gridded domain with lakes, gages and a regridding factor of 4 and threshold of 20"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Create the output directory and ensure it is empty\n",
+    "! mkdir -p /home/docker/GIS_Training/Outputs/Gridded\n",
+    "! rm -rf /home/docker/GIS_Training/Outputs/Gridded/*\n",
+    "\n",
+    "# Run the GIS Pre-processing script (with line-breaks)\n",
+    "! python Build_Routing_Stack.py \\\n",
+    "    -i /home/docker/wrf-hydro-training/example_case/Gridded/DOMAIN/geo_em.d01.nc \\\n",
+    "    -l /home/docker/GIS_Training/Croton_Lambert/lake_shapes/lakes.shp \\\n",
+    "    --CSV /home/docker/GIS_Training/Croton_Lambert/croton_frxst_pts_FOSS.csv \\\n",
+    "    -d /home/docker/GIS_Training/Croton_Lambert/NED_30m_Croton.tif \\\n",
+    "    -R 4 \\\n",
+    "    -t 20 \\\n",
+    "    -o /home/docker/GIS_Training/Outputs/Gridded/Gridded_r4_t20_lakes_frxst_mask.zip\n",
+    "\n",
+    "# Unzip the directory in-place\n",
+    "! unzip /home/docker/GIS_Training/Outputs/Gridded/Gridded_r4_t20_lakes_frxst_mask.zip -d /home/docker/GIS_Training/Outputs/Gridded"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### B. Gridded channel routing configuration with forecast points, and channel masking\n",
+    "\n",
+    "This domain is a gridded domain without lakes. It contains gages, masked basins and a regridding factor of 4 and thrshold of 20"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Create the output directory and ensure it is empty\n",
+    "! mkdir -p /home/docker/GIS_Training/Outputs/Gridded_no_lakes\n",
+    "! rm -rf /home/docker/GIS_Training/Outputs/Gridded_no_lakes/*\n",
+    "\n",
+    "# Run the GIS Pre-processing script (with line-breaks)\n",
+    "! python Build_Routing_Stack.py \\\n",
+    "    -i /home/docker/wrf-hydro-training/example_case/Gridded_no_lakes/DOMAIN/geo_em.d01.nc \\\n",
+    "    --CSV /home/docker/GIS_Training/Croton_Lambert/croton_frxst_pts_FOSS.csv \\\n",
+    "    -d /home/docker/GIS_Training/Croton_Lambert/NED_30m_Croton.tif \\\n",
+    "    -R 4 \\\n",
+    "    -t 20 \\\n",
+    "    -o /home/docker/GIS_Training/Outputs/Gridded_no_lakes/Gridded_r4_t20_frxst_mask.zip\n",
+    "\n",
+    "# Unzip the directory in-place\n",
+    "! unzip /home/docker/GIS_Training/Outputs/Gridded_no_lakes/Gridded_r4_t20_frxst_mask.zip -d /home/docker/GIS_Training/Outputs/Gridded_no_lakes/"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### C. Reach-based channel routing configuration with forecast points\n",
+    "\n",
+    "This domain is a reach-based routing configuration with gages, no masking, no lakes. Regridding factor of 4 and threshold of 20"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Create the output directory and ensure it is empty\n",
+    "! mkdir -p /home/docker/GIS_Training/Outputs/Reach\n",
+    "! rm -rf /home/docker/GIS_Training/Outputs/Reach/*\n",
+    "\n",
+    "# Run the GIS Pre-processing script (with line-breaks)\n",
+    "! python Build_Routing_Stack.py \\\n",
+    "    -i /home/docker/wrf-hydro-training/example_case/Reach/DOMAIN/geo_em.d01.nc \\\n",
+    "    -r True \\\n",
+    "    --CSV /home/docker/GIS_Training/Croton_Lambert/croton_frxst_pts_FOSS.csv \\\n",
+    "    -d /home/docker/GIS_Training/Croton_Lambert/NED_30m_Croton.tif \\\n",
+    "    -R 4 \\\n",
+    "    -t 20 \\\n",
+    "    -o /home/docker/GIS_Training/Outputs/Reach/Reach_r4_t20_frxst.zip\n",
+    "\n",
+    "# Unzip the directory in-place\n",
+    "! unzip /home/docker/GIS_Training/Outputs/Reach/Reach_r4_t20_frxst.zip -d /home/docker/GIS_Training/Outputs/Reach/"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### You have reached the end of Lesson S2"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### You have reached the end of Lesson S2"
    ]
   },
   {
